--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
 
                 <div class="pfp">
-                    <img src="/src-images/cat1.jpg" alt="my profile picture">
+                    <img src="cat1.jpg" alt="my profile picture">
                 </div>
 
             </div>
@@ -81,15 +81,15 @@
                 <p class="text">Proficient in HTML, CSS, and JavaScript, creating responsive and intuitive designs for modern web applications.</p>
                 <div class="logo">
                     <div class="skills-logo">
-                        <img src="/src-images/html-logo.webp" alt="html">
+                        <img src="html-logo.webp" alt="html">
                         <span>HTML</span>
                     </div>
                     <div class="skills-logo">
-                        <img src="/src-images/css-logo.webp" alt="html">
+                        <img src="css-logo.webp" alt="html">
                         <span>CSS</span>
                     </div>
                     <div class="skills-logo">
-                        <img src="/src-images/javascript-logo.webp" alt="html">
+                        <img src="javascript-logo.webp" alt="html">
                         <span>JavaScript</span>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
 
                     <div class="card">
                         <a href="#">
-                            <img src="/src-images/amazon.jpg" alt="Avatar">
+                            <img src="amazon.jpg" alt="Avatar">
                             <h2>Amazon Clone</h2>
                             <span></span>
                         </a>
@@ -114,14 +114,14 @@
 
                     <div class="card">
                         <a href="#">
-                            <img src="/src-images/flipkart.jpg" alt="Avatar">
+                            <img src="flipkart.jpg" alt="Avatar">
                         <h2>Flipkart Clone</h2>
                         </a>
                     </div>
 
                     <div class="card">
                         <a href="#">
-                            <img src="/src-images/portfolio.png" alt="Avatar">
+                            <img src="portfolio.png" alt="Avatar">
                         <h2>Portfolio</h2>
                         </a>
                     </div>
