--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,9 @@
                 <div>
                     <h1>Hi, It's Dhiraj👋</h1>
                     <p class="text">
-                        Hi, I'm Dhiraj, a web developer with expertise in the MERN Stack. I specialize in building responsive, user-focused websites and applications that bring ideas to life through clean and efficient code.
+                        Hi, I'm Dhiraj, a web developer with expertise in the MERN Stack. 
+                        I specialize in building responsive, user-focused websites and applications that bring ideas to life through clean and efficient code.
+                        also im learning ML alongside as my side hobby🤖
                     </p>
                     <br>
                     <div class="short-link">
@@ -69,7 +71,7 @@
                 </div>
 
                 <div class="pfp">
-                    <img src="/cat1.jpg" alt="my profile picture">
+                    <img src="/src-images/cat1.jpg" alt="my profile picture">
                 </div>
 
             </div>
@@ -81,16 +83,32 @@
                 <p class="text">Proficient in HTML, CSS, and JavaScript, creating responsive and intuitive designs for modern web applications.</p>
                 <div class="logo">
                     <div class="skills-logo">
-                        <img src="/html-logo.webp" alt="html">
+                        <img src="/src-images/html-logo.webp" alt="html">
                         <span>HTML</span>
                     </div>
                     <div class="skills-logo">
-                        <img src="/css-logo.webp" alt="html">
+                        <img src="/src-images/css-logo.webp" alt="html">
                         <span>CSS</span>
                     </div>
                     <div class="skills-logo">
-                        <img src="/javascript-logo.webp" alt="html">
+                        <img src="/src-images/javascript-logo.webp" alt="html">
                         <span>JavaScript</span>
+                    </div><br>
+                                       <div class="skills-logo">
+                        <img src="/src-images/Node.js_logo.svg.png" alt="html">
+                        <span>Node.js</span>
+                    </div>
+                    <div class="skills-logo">
+                        <img src="/src-images/Express._js_logo.webp" alt="html">
+                        <span>Express.js</span>
+                    </div>
+                    <div class="skills-logo">
+                        <img src="/src-images/mongodb.avif" alt="html">
+                        <span>MongoDB</span>
+                    </div>
+                                        <div class="skills-logo">
+                        <img src="/src-images/python.jpeg" alt="html">
+                        <span>Python</span>
                     </div>
                 </div>
             </div>
@@ -106,7 +124,7 @@
 
                     <div class="card">
                         <a href="#">
-                            <img src="/amazon.jpg" alt="Avatar">
+                            <img src="/src-images/amazon.jpg" alt="Avatar">
                             <h2>Amazon Clone</h2>
                             <span></span>
                         </a>
@@ -114,14 +132,14 @@
 
                     <div class="card">
                         <a href="#">
-                            <img src="/flipkart.jpg" alt="Avatar">
+                            <img src="/src-images/flipkart.jpg" alt="Avatar">
                         <h2>Flipkart Clone</h2>
                         </a>
                     </div>
 
                     <div class="card">
                         <a href="#">
-                            <img src="/portfolio.png" alt="Avatar">
+                            <img src="/src-images/portfolio.png" alt="Avatar">
                         <h2>Portfolio</h2>
                         </a>
                     </div>
@@ -137,7 +155,11 @@
                 <div>
                     <h3>About Me</h3>
                     <br>
-                    <p class="text">I am a third-year BSc Computer Science student with a passion for web development. Over the past year, I have honed my skills in HTML, CSS, and JavaScript, and I am excited to build interactive and responsive web applications. I am currently expanding my knowledge in the MERN stack and working on several projects to strengthen my skills. Additionally, I am interested in learning machine learning and integrating it into my web development journey. I am eager to continue learning and applying my skills to create impactful solutions.</p>
+                    <p class="text">I am a third-year BSc Computer Science student with a passion for web development.
+                         Over the past months, I have honed my skills in HTML, CSS, and JavaScript, and I am excited to build interactive and responsive web applications.
+                          I am currently expanding my knowledge in the MERN stack and working on several projects to strengthen my skills.
+                           Additionally, I am interested in learning machine learning and integrating it into my web development journey. 
+                           I am eager to continue learning and applying my skills to create impactful solutions.</p>
                 </div>
                 
             
